# rss-reader

./: .gitignore  compose.yml  db-script  update_script.sh
database/: dbscript.sql
rss-api/: Cargo.toml  Dockerfile  error_log.txt  error_log.xml  rss-20.xml  rss-91.xml
rss-api/src/: database.rs  lib.rs  logger.rs  main.rs  rss_parser.rs  scraper.rs  web_scraper.rs
rss-api/src/scraper/: mod.rs
rss-api/test-files/: atom.xml  rss-92.xml  scrape-example-verge.html  scrape-example-wired.html  scrape-example-www.wired.com.html
rss-frontend/: Cargo.toml  Dioxus.toml  index.html
rss-frontend/public/assets/: manifest.json  style.css
rss-frontend/src/: lib.rs  main.rs  querystructs.rs
vue-frontend/: Dockerfile  index.html  package-lock.json  package.json
vue-frontend/nginx-files/: nginx.conf
vue-frontend/src/: App.vue  lib.js  main.js  manifest.json  sw.js
vue-frontend/src/assets/: main.css
vue-frontend/src/components/: FallbackSettings.vue  PostListItem.vue  PostLoader.vue  TodayLoader.vue
vue-frontend/src/router/: index.js
vue-frontend/src/stores/: state.js
vue-frontend/src/views/: All.vue  Article.vue  ChannelSettings.vue  Settings.vue  Today.vue
