[package]
name = "rss-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
mysql = "24.0.0"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
roxmltree = { version = "0.19.0" }
reqwest = "0.11.24"
chrono = { version = "0.4.33", features = ["serde", "alloc"] }
