[package]
name = "rss-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.4", features = ["macros"] }
mysql = "24.0.0"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
roxmltree = { version = "0.19.0" }
reqwest = { version = "0.11.24", features = ["cookies"] }
chrono = { version = "0.4.33", features = ["serde", "alloc"] }
scraper = "0.18.1"
mysql_common = { version = "0.30.6", features = ["chrono"] }
tower-http = { version = "0.5.1", features = ["trace", "cors"] }
tower = "0.4.13"
tracing-subscriber = { version = "0.3.18", features = ["fmt"] }
tracing = "0.1.40"
http = "1.0.0"
lazy_static = "1.4.0"
