[package]
name = "rss-frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.34", features = ["serde"] }
dioxus-logger = "0.4.1"
dioxus-router = "0.4.3"
dioxus-hooks = "0.4.3"
env_logger = "0.11.2"
form_urlencoded = "1.2.1"
log = "0.4.20"
serde = "1.0.196"
tokio = "1.36.0"
wasm-bindgen = "=0.2.91"
reqwest = { version = "0.11.26", features = ["json", "cookies", "cookie_store"] }
dioxus = "0.4.3"
dioxus-web = "0.4.3"
